<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:clipToPadding="false"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/title_h"
        android:background="@color/title_blue"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/activity_user_honor_back"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="300"
            android:background="@drawable/back"
            android:includeFontPadding="false"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="2dp"
            android:padding="5dp" />


        <TextView
            android:id="@+id/titles"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="80"
            android:gravity="center"
            android:text="@string/f_user_honor_explain"
            android:textColor="@color/title_text_color"
            android:textSize="@dimen/main_title_text_size" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="305" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="30dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:gravity="center"
                android:text="@string/activity_user_honor_experience"
                android:textSize="20dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:gravity="center"
                android:text="@string/f_user_level_zero_ex"
                android:textSize="15dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:gravity="center"
                android:text="@string/f_user_level_one_ex"
                android:textSize="15dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:gravity="center"
                android:text="@string/f_user_level_two_ex"
                android:textSize="15dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:gravity="center"
                android:text="@string/f_user_level_three_ex"
                android:textSize="15dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:gravity="center"
                android:text="@string/f_user_level_four_ex"
                android:textSize="15dp" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:gravity="center"
                android:text="@string/f_user_level_five_ex"
                android:textSize="15dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:gravity="center"
                android:text="@string/activity_user_honor_name"
                android:textSize="20dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:gravity="center"
                android:text="@string/f_user_level_zero"
                android:textSize="15dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:gravity="center"
                android:text="@string/f_user_level_one"
                android:textSize="15dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:gravity="center"
                android:text="@string/f_user_level_two"
                android:textSize="15dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:gravity="center"
                android:text="@string/f_user_level_three"
                android:textSize="15dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:gravity="center"
                android:text="@string/f_user_level_four"
                android:textSize="15dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:gravity="center"
                android:text="@string/f_user_level_five"
                android:textSize="15dp" />

        </LinearLayout>
    </LinearLayout>
</LinearLayout>
