<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/f_feedback"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:id="@+id/f_feedback_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:background="@drawable/bg_white_corners"
            android:gravity="left|top"
            android:inputType="textMultiLine"
            android:maxLength="100"
            android:maxLines="7"
            android:minHeight="150dp"
            android:minLines="1"
            android:scrollbars="vertical"
            android:textSize="15sp" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="240" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="200"
            android:gravity="center"
            android:text="@string/f_feedback_contact"
            android:textSize="@dimen/tv_account" />

        <EditText
            android:id="@+id/f_feedback_contact_et"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="100"
            android:maxLength="40"
            android:background="@drawable/bg_white_corners"
            android:hint="@string/f_feedback_contact_hint"
            android:includeFontPadding="false"
            android:selectAllOnFocus="true"
            android:textSize="@dimen/edit_hint_text_size" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="220" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center_horizontal">

        <Button
            android:id="@+id/f_feedback_submit_btn"
            android:layout_width="150dp"
            android:layout_height="60dp"
            android:layout_marginBottom="30dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/blue_selector"
            android:text="@string/f_share_submit_hint"
            android:textSize="17dp" />
    </LinearLayout>

</LinearLayout>
