<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:clipToPadding="false"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/title_h"
        android:background="@color/title_blue"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/activity_user_change_nick_name_back"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="315"
            android:background="@drawable/back"
            android:includeFontPadding="false"
            android:layout_marginBottom="2dp"
            android:layout_marginTop="2dp"
            android:padding="5dp" />


        <TextView
            android:id="@+id/titles"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="80"
            android:gravity="center"
            android:text="@string/activity_change_nick_name"
            android:textColor="@color/title_text_color"
            android:textSize="@dimen/main_title_text_size" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="305" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="50dp"
        android:layout_weight="1"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical">

        <EditText
            android:id="@+id/activity_user_change_nick_name_et"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_marginBottom="50dp"
            android:background="@drawable/bg_white_corners"
            android:hint="@string/activity_change_nick_name_hint"
            android:maxLength="10"
            android:includeFontPadding="false"
            android:textSize="@dimen/edit_hint_text_size"/>
        <Button
            android:id="@+id/activity_user_change_nick_name_now"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:background="@drawable/blue_selector"
            android:text="@string/activity_change_nick_name_now"
            android:layout_marginBottom="100dp"/>
    </LinearLayout>
</LinearLayout>
